# lwmovie

./: .gitignore  CMakeLists.txt  Cake_Documentation.odt  CommandLineOptions.txt  Encoding.txt  LICENSE.txt  Ogg.props  ProjectHome.md  README.md  Theora.props  Using_lwmovie.txt  coverity-build.bat  gpudecodeexample.psess  gpudecoding_d3d11.txt  lwfe.sln  lwmovie.sln  lwmovie_config.h  lwplay.psess  makerelease.bat  makeshaders_d3d11.bat
common/: lwmovie_atomicint_funcs.hpp  lwmovie_atomicint_type.hpp  lwmovie_attribs.h  lwmovie_config.h  lwmovie_coretypes.h
d3d11_makeshaders/: d3d11_makeshaders.cpp  d3d11_makeshaders.vcxproj  d3d11_makeshaders.vcxproj.filters
doc/: Cake_Documentation.odt  CommandLineOptions.txt  Decoding.txt  Encoding.txt  GPU Decoding Porting Guide.txt  LICENSE.txt  sb4_roq.txt
gpudecodeexample/: d3d11_shaders.h  gpudecodeexample.vcxproj  gpudecodeexample.vcxproj.filters  main.cpp
libogg-1.3.1/src/: alloc.c  bitwise.c  framing.c
lwcelt/: bands.c  celt.h  config.h  float_cast.h  kiss_fft.c  kiss_fft.h  lwcelt.vcxproj  lwcelt.vcxproj.filters  lwcelt_defs.h  lwmem.c  mdct.c  mdct.h  os_support.h  pitch.c  rate.c  vq.c
lwcelt/celt/: bands.c  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  config.h  cwrs.c  entcode.c  entdec.c  entenc.c  kiss_fft.c  kiss_fft.h  laplace.c  mathops.c  mdct.c  mdct.h  modes.c  modes.h  os_support.h  pitch.c  quant_bands.c  rate.c  static_modes_float.h  vq.c
lwcelt/include/: opus_custom.h
lwenc/: Program.cs  lwenc.csproj
lwenc/Properties/: AssemblyInfo.cs
lwenccmd/: .gitignore  Program.cs  lwenccmd.csproj
lwenccmd/Properties/: AssemblyInfo.cs
lwenctools/: CodecRepository.cs  EncodeSettingsProject.cs  ExecutionPlan.cs  ExecutionSet.cs  ICodecSettingsControl.cs  IExecutionPlanSettings.cs  ITaskRunnerMonitor.cs  ProcessIOConnector.cs  TaskRunner.cs  lwenctools.csproj
lwenctools/Codec Settings/: ADPCMAudioOptionsControl.Designer.cs  ADPCMAudioOptionsControl.cs  ADPCMAudioSettings.cs  CELTAudioOptionsControl.Designer.cs  CELTAudioOptionsControl.cs  CELTAudioSettings.cs  MP2AudioOptionsControl.Designer.cs  MP2AudioOptionsControl.cs  MP2AudioSettings.cs  (+12 more)
lwfe/: CELTAudioOptionsControl.cs  CELTAudioSettings.cs  CodecRepository.cs  ErrorList.Designer.cs  ErrorList.cs  ExecutionPlan.cs  ExecutionSet.cs  FileSelector.Designer.cs  ICodecSettingsControl.cs  IExecutionPlanSettings.cs  MPEG1VideoSettings.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  TaskLogView.Designer.cs  TaskLogView.cs  TaskMonitor.Designer.cs  TaskMonitor.cs  lwfe.csproj
lwfelib/: lwfelib.csproj
lwmovie/: About lwmovie.txt  lwmovie.h  lwmovie.vcxproj  lwmovie.vcxproj.filters  lwmovie_adpcm.cpp  lwmovie_adpcm.hpp  lwmovie_adpcm_decoder.cpp  lwmovie_adpcm_decoder.hpp  lwmovie_api.h  lwmovie_api.hpp  lwmovie_atomicint.hpp  lwmovie_audiobuffer.cpp  lwmovie_audiobuffer.hpp  lwmovie_audiocodec.cpp  lwmovie_audiocodec.hpp  lwmovie_bitloader.hpp  lwmovie_bits.hpp  lwmovie_bitstream.cpp  lwmovie_bitstream.hpp  lwmovie_cake.cpp  lwmovie_cake.h  lwmovie_cake_cppshims.hpp  lwmovie_celt_decoder.cpp  lwmovie_celt_decoder.hpp  lwmovie_constants.cpp  lwmovie_constants.hpp  lwmovie_cpp_shims.hpp  lwmovie_decodedct.cpp  lwmovie_demux.cpp  lwmovie_demux.hpp  lwmovie_exportpixels.cpp  lwmovie_external_types.h  lwmovie_fillable.hpp  lwmovie_fp.cpp  lwmovie_fp.hpp  lwmovie_fp_d3d11.cpp  lwmovie_fp_d3d11.hpp  lwmovie_fp_systemmem.cpp  lwmovie_idct.cpp  lwmovie_idct.hpp  (+41 more)
lwmux/: lwmux.cpp  lwmux.vcxproj  lwmux.vcxproj.filters  lwmux_adpcmenc.cpp  lwmux_celtenc.cpp  lwmux_convertm1v.cpp  lwmux_convertmp2.cpp  lwmux_convertmpegvideo.cpp  lwmux_escape.cpp  lwmux_escape.hpp  lwmux_mux.cpp  lwmux_osfile.hpp  lwmux_osfile_win32.cpp  lwmux_osfile_x.cpp  lwmux_planio.hpp  lwmux_riff.cpp  lwmux_riff.hpp  lwmux_util.cpp  lwmux_util.hpp  lwmux_wav.cpp  lwmux_wav.hpp
lwplay/: .gitignore  lwplay.vcxproj  lwplay.vcxproj.filters  lwplay_interfaces.cpp  lwplay_interfaces.hpp  main.cpp  threadpool.hpp  threadpool_win32.cpp
lwrerange/: lwrerange.cpp  lwrerange.vcxproj  lwrerange.vcxproj.filters
lwroqenc/: SB4ELBG2.cpp  SB4ELBG2.hpp  SB4Encoder.cpp  SB4Encoder.hpp  SB4Encoder_EncodeFrame.cpp  SB4Encoder_MakeCodebooks.cpp  SB4Image.hpp  SB4Random.cpp  SB4Random.hpp  lwroqenc.cpp  lwroqenc.vcxproj  lwroqenc.vcxproj.filters
lwthenc/: lwthenc.cpp  lwthenc.vcxproj  lwthenc.vcxproj.filters
mp2dec2/: lwmovie_layer2.hpp  lwmovie_layer2_bitstream.hpp  lwmovie_layer2_constants.hpp  lwmovie_layer2_csf.cpp  lwmovie_layer2_csf.hpp  lwmovie_layer2_decode.cpp  lwmovie_layer2_decodestate.hpp  lwmovie_layer2_dspops.hpp  lwmovie_layer2_fixedpoint.hpp  lwmovie_layer2_fixedreal.hpp  lwmovie_layer2_imdct_32.cpp  lwmovie_layer2_sbs.cpp  lwmovie_layer2_ssefloat.hpp  lwmovie_layer2_sseint.hpp  lwmovie_layer2_tables.cpp  lwmovie_layer2_xmath.hpp  mp2dec2.vcxproj  mp2dec2.vcxproj.filters  mp2dec_internal.h  test.cpp
mp2maketable/: mp2maketable.vcxproj
ogg/: ogg.vcxproj  ogg.vcxproj.filters
switchblade4/: DropROQ.dsp  avi2roq_v2.c  elbg.h  sb4.h  sb4image.h  sb4random.h  sb4sdl.h  sb4videoenc.cpp  sdlstuff.c
theora/: .gitignore
theoracommon/: theoracommon.vcxproj  theoracommon.vcxproj.filters
theoradec/: theoradec.vcxproj  theoradec.vcxproj.filters
theoraenc/: theoraenc.vcxproj  theoraenc.vcxproj.filters
trunk/: Encoding.txt  LICENSE.txt  Using_lwmovie.txt  lwmovie.sln  lwmovie_config.h
(+199 files in other folders)
